      ~anki-editor-api-enqueue~ to make working with multi api calls
      easier
   4. Fixed computing hash of media files against file names instead
      of file content
   5. Supports literal note fields
   6. Added more utility commands/functions
   7. ~anki-editor-use-math-jax~ was replaced with
      ~anki-editor-latex-style~
   8. Minor internal code refactoring

** v0.3.3

   - Reenable support for setting tags with =ANKI_TAGS= property
   - Add a variable =anki-editor-org-tags-as-anki-tags= to make it able to not use Org tags as Anki tags
   - Add a variable =anki-editor-protected-tags= to protect certain tags from being delete
   - Add a variable =anki-editor-ignored-org-tags= to ignore special Org tags

** v0.3.2

   - Fixes issue #19
   - Fixes issue #20
   - Advising and hook functions execute only when this mode is turned on for current buffer
   - Exposes two functions: ~anki-editor-map-note-entries~ and ~anki-editor-note-at-point~

** v0.3.1

   - Fixes issue #17

** v0.3

   - Removed the concept of "deck heading", decks now are set via
     =ANKI_DECK= property
   - Note tags now are set via Org tags
   - Turned this package into a minor mode, when turned on it extends
     some Org functions to provide auto-completion for tags,
     =ANKI_DECK= values etc.
   - =anki-editor-submit= is renamed to =anki-editor-push-notes= and
     supports additional parameters to restrict the range of notes to
     be pushed.
   - Other internal changes

   There's a [[./fix-notes-0.3.el][fix-notes-0.3.el]] in this repo for migrating old notes.

** v0.2.2

   - Adds optional tag inheritance.
   - Adds optional deck creation.
   - Fixes issue #15 (url-encoded file path isn't recognized by shell commands).

** v0.2.1

   - Automatically store media files for links to file when submitting.
   - =anki-editor-insert-tags= renamed to =anki-editor-add-tags=, with
     behavior slightly changed.
   - =anki-editor-export-heading-contents-to-html= renamed to